# nonebot-plugin-gkmscalculator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/actions/setup-python/: action.yml
src/nonebot_plugin_gkmsCalculator/: __init__.py  calc.py  character_aliases.json  config.py
src/nonebot_plugin_gkmsCalculator/core/: __init__.py  attr_evaluator.py  calcfun.py  character_attrs.py
src/nonebot_plugin_gkmsCalculator/ocr/: OCRattrs.py  __init__.py  ocr_init.py  unified_ocr.py
src/nonebot_plugin_gkmsCalculator/utils/: __init__.py  downloadpic.py
tests/: __init__.py  conftest.py  test_attr_evaluator.py  test_calcfun.py
